--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		
 		<div class="div-cell"><a class="url" href="http://www.acfun.cn/">知乎</a> </div>
 		<div class="div-cell"><a class="url" href="https://www.bilibili.com/">百度知道</a></div>
-		<div class="div-cell"><a class="url" href="https://www.v2ex.com//">V2EX</a> </div>
+		<div class="div-cell"><a class="url" href="https://www.v2ex.com/">V2EX</a> </div>
 	</div>
 	<div class="listtittle">学习</div>
 	<div class="div-list">
