open in new window

--- a/index.html
+++ b/index.html
@@ -20,47 +20,47 @@
 	<div class="listtittle">资讯</div>
 	<div class="div-list">
 		
-		<div class="div-cell"><a class="url" href="http://cn.engadget.com/">瘾科技</a></div>
+		<div class="div-cell"><a class="url" href="http://cn.engadget.com/" target="view_window" >瘾科技</a></div>
 		<div class="div-cell"><a class="url" href="https://www.inoreader.com/all_articles">TTRSS</a> </div>
 	</div>
 	<div class="listtittle">购物</div>
 	<div class="div-list">
 		
-		<div class="div-cell"><a class="url" href="https://www.smzdm.com/">什么值得买</a> </div>
-		<div class="div-cell"><a class="url" href="https://www.taobao.com/">淘宝</a></div>
-		<div class="div-cell"><a class="url" href="https://www.jd.com/">京东</a> </div>
-		<div class="div-cell"><a class="url" href="https://www.amazon.cn/">亚马逊</a> </div>
-		<div class="div-cell"><a class="url" href="https://www.mi.com/">小米商城</a> </div>
-		<div class="div-cell"><a class="url" href="https://www.suning.com/">苏宁易购</a> </div>
+		<div class="div-cell"><a class="url" href="https://www.smzdm.com/" target="view_window" >什么值得买</a> </div>
+		<div class="div-cell"><a class="url" href="https://www.taobao.com/" target="view_window" >淘宝</a></div>
+		<div class="div-cell"><a class="url" href="https://www.jd.com/" target="view_window" >京东</a> </div>
+		<div class="div-cell"><a class="url" href="https://www.amazon.cn/" target="view_window" >亚马逊</a> </div>
+		<div class="div-cell"><a class="url" href="https://www.mi.com/" target="view_window" >小米商城</a> </div>
+		<div class="div-cell"><a class="url" href="https://www.suning.com/" target="view_window" >苏宁易购</a> </div>
 	</div>
 	<div class="listtittle">视频</div>
 	<div class="div-list">
 		
-		<div class="div-cell"><a class="url" href="http://www.acfun.cn/">ACFUN</a> </div>
-		<div class="div-cell"><a class="url" href="https://www.bilibili.com/">哔哩哔哩</a></div>
-		<div class="div-cell"><a class="url" href="https://www.iqiyi.com/">爱奇艺</a> </div>
-		<div class="div-cell"><a class="url" href="https://v.qq.com/">腾讯视频</a> </div>
-		<div class="div-cell"><a class="url" href="http://www.youku.com/">优酷视频</a> </div>
+		<div class="div-cell"><a class="url" href="http://www.acfun.cn/" target="view_window" >ACFUN</a> </div>
+		<div class="div-cell"><a class="url" href="https://www.bilibili.com/" target="view_window" >哔哩哔哩</a></div>
+		<div class="div-cell"><a class="url" href="https://www.iqiyi.com/" target="view_window" >爱奇艺</a> </div>
+		<div class="div-cell"><a class="url" href="https://v.qq.com/" target="view_window" >腾讯视频</a> </div>
+		<div class="div-cell"><a class="url" href="http://www.youku.com/" target="view_window" >优酷视频</a> </div>
 		
 	</div>
 	<div class="listtittle">社区</div>
 	<div class="div-list">
 		
-		<div class="div-cell"><a class="url" href="http://www.acfun.cn/">知乎</a> </div>
-		<div class="div-cell"><a class="url" href="https://www.bilibili.com/">百度知道</a></div>
-		<div class="div-cell"><a class="url" href="https://www.v2ex.com/">V2EX</a> </div>
+		<div class="div-cell"><a class="url" href="http://www.acfun.cn/" target="view_window" >知乎</a> </div>
+		<div class="div-cell"><a class="url" href="https://www.bilibili.com/" target="view_window" >百度知道</a></div>
+		<div class="div-cell"><a class="url" href="https://www.v2ex.com/" target="view_window" >V2EX</a> </div>
 	</div>
 	<div class="listtittle">学习</div>
 	<div class="div-list">
 		
-		<div class="div-cell"><a class="url" href="http://www.runoob.com/">菜鸟教程</a> </div>
-		<div class="div-cell"><a class="url" href="https://open.163.com/">网易公开课</a></div>
+		<div class="div-cell"><a class="url" href="http://www.runoob.com/" target="view_window" >菜鸟教程</a> </div>
+		<div class="div-cell"><a class="url" href="https://open.163.com/" target="view_window" >网易公开课</a></div>
 	</div>
 	<div class="listtittle">其他</div>
 	<div class="div-list">
 		
-		<div class="div-cell"><a class="url" href="https://www.xda-developers.com/">XDA论坛</a> </div>
-		<div class="div-cell"><a class="url" href="https://github.com/">github</a></div>
+		<div class="div-cell"><a class="url" href="https://www.xda-developers.com/" target="view_window" >XDA论坛</a> </div>
+		<div class="div-cell"><a class="url" href="https://github.com/" target="view_window" >github</a></div>
 	</div>
 </div>
 </body>
