--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 	<div class="listtittle">社区</div>
 	<div class="div-list">
 		
-		<div class="div-cell"><a class="url" href="http://www.acfun.cn/" target="view_window" >知乎</a> </div>
-		<div class="div-cell"><a class="url" href="https://www.bilibili.com/" target="view_window" >百度知道</a></div>
+		<div class="div-cell"><a class="url" href="https://www.zhihu.com/" target="view_window" >知乎</a> </div>
+		<div class="div-cell"><a class="url" href="https://zhidao.baidu.com/" target="view_window" >百度知道</a></div>
 		<div class="div-cell"><a class="url" href="https://www.v2ex.com/" target="view_window" >V2EX</a> </div>
 	</div>
 	<div class="listtittle">学习</div>
