--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <div style="width: 800px;">
 	<div class="webname">我的书签</div>
 	<div style="width:400px;">
-	<form action="https://www.baidu.com/s">
-				<input style="width:300px;margin-top: 1em; margin-bottom: 1em;" type="text" name="wd"/><input type="submit"  value="百度"/>
+	<form action="https://cn.bing.com/search" target="_self" method="get">
+				<input style="width:300px;margin-top: 1em; margin-bottom: 1em;height: 2em;" type="text" name="q" placeholder="请输入要搜索的内容："  /><input type="submit"  value="必应"/>
 	</form>
 	</div>
 </div>
@@ -21,8 +21,10 @@
 	<div class="div-list">
 		
 		<div class="div-cell"><a class="url" href="http://cn.engadget.com/" target="view_window" >瘾科技</a></div>
-		<div class="div-cell"><a class="url" href="https://www.inoreader.com/all_articles">TTRSS</a> </div>
+		<div class="div-cell"><a class="url" href="https://www.inoreader.com/all_articles"  target="view_window">TTRSS</a> </div>
+		<div class="div-cell"><a class="url" href="https://readhub.cn/topics" target="view_window" >ReadHub</a></div>
 	</div>
+		
 	<div class="listtittle">购物</div>
 	<div class="div-list">
 		
@@ -47,7 +49,6 @@
 	<div class="div-list">
 		
 		<div class="div-cell"><a class="url" href="https://www.zhihu.com/" target="view_window" >知乎</a> </div>
-		<div class="div-cell"><a class="url" href="https://zhidao.baidu.com/" target="view_window" >百度知道</a></div>
 		<div class="div-cell"><a class="url" href="https://www.v2ex.com/" target="view_window" >V2EX</a> </div>
 	</div>
 	<div class="listtittle">学习</div>
